# qc-torch-study

./: .gitignore  1.深度学习基础概念解释.md  2.深度学习概念的数学解释.md  4.整体分析.md  README.md  pyproject.toml
advance/: 0_load_data.py  1_pytorch.py  2_migrate.py  3_seq_to_seq.py  4_save_load_model.py  base.py  graph.py
advance/model_save/: model.pth  model_total.pth
docs/: 3.反向传播问题与调试.md  pytorch-gpt-from-scratch.md  pytorch-overview.md
init/: 0_tensor.py  1_ad.py  2_0_nn_simple.py  2_1_nn.py  3_image_classify.py  4_data_concurrent.py
