[project]
name = "torch-study"
version = "0.1.0"
description = ""
authors = [{name = "qiaochao", email = "qiaochao@icourt.cc"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "scikit-image>=0.25.0",
    "pandas>=2.2.3",
]
